crates/next-custom-transforms/tests/errors/server-actions/server-graph/5/input.js
'use server'

export * from 'foo'
